--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Invie</title>
+    <title>Invie guitarras</title>
     <style media="screen">
     body{
       margin: 0;
