--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
     img{
       max-width: 100%;
       vertical-align: top;
-    
+
     }
     img#responsive{
       display: none;
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <img src="invie-responsive.png" alt="">
+    <img src="invie-responsive.png" alt="" id="responsive">
     <img src="header.jpg" alt="">
     <img src="hero.jpg" alt="">
     <img src="acustica.jpg" alt="">
